ultima_actualizacion_proyecto_personal_2_03_14

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8"/>
 	<meta name="drescription" content="primer proyecto en html 5"/>
 		<title>Puls2014: Comunidad online de gente como daniel</title>
+		<link rel="stylesheet" href="normalize.css"/>
+		<link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
 	<header>
@@ -42,21 +44,26 @@
 					<span class="fecha_item">
 						hace <STRONG>5</STRONG>min
 					</span>
-					<a href="#" class="coment_item">69</a>
-					<a href="#" class="guardar_item"></a>
 				</div>
 				<div class="votacion">
-					<a href="#" class="up"></a>
+					<a href="#" class="up">U</a>
 					720
-					<a href="#" class="donw"></a>
+					<a href="#" class="donw">D</a>
+					<a href="#" class="coment_item">69</a>
+					<a href="#" class="guardar_item">X</a>
 				</div>
 			</article>
 
 		</SECTION>
 		<footer>
-			<STRONG>
+			<p>
+				<STRONG>
 				Powered by Daniel©
-			</STRONG>
+				</STRONG>
+			</p>
+			<p>
+				mejorando.la 2014
+			</p>
 		</footer>
 </body>
 </html>
