ultima_actualizacion_proyecto_personal_10_02_14

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<figure id="logo">
 			<img src="logo.png"/>
 		</figure>
-		<h1>Puls4: comunidad de personas como daniel</h1>
+		<h1>Puls2014: comunidad de personas como daniel</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg"/>
 	</header>
@@ -31,9 +31,9 @@
 			<article class="item">
 				<figure class="imagen_item">
 					<img src="imagen.jpg"/>
-				</figure>
-				<h2><a href="#">
-					titulo del articulo
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					La hegemonía de Python y la caída de Java
 					</a>
 				</h2>
 				<div class="autor_item">
@@ -49,11 +49,160 @@
 					<a href="#" class="up">U</a>
 					720
 					<a href="#" class="donw">D</a>
-					<a href="#" class="coment_item">69</a>
+					<a href="#" class="comentarios_item">69</a>
 					<a href="#" class="guardar_item">X</a>
 				</div>
 			</article>
-
+<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					POO: Inyección de dependencias en Laravel (III)
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Las llaves del cuarto de hotel serán una app en tu teléfono
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Bower, un administrador de paquetes para la web
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					POO: Inyección de dependencias (II)
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Elementary OS, un estilo OS X para Linux
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Cómo crear una cuenta en Google AdWords
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up">U</a>
+					720
+					<a href="#" class="donw">D</a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item">X</a>
+				</div>
+			</article>
 		</SECTION>
 		<footer>
 			<p>
