--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="drescription" content="primer proyecto en html 5"/>
+	<meta name="description" content="primer proyecto en html 5"/>
+	<meta name="viewport" content="widht=device-widht, minimum scale=1, maximum-scale=1"/>
 		<title>Puls2014: Comunidad online de gente como daniel</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="normalize.css"/>
 		<link rel="stylesheet" href="estilos.css"/>
+		<script src="prefixfree.Js"></script>
+
 </head>
 <body>
 	<header>
@@ -24,16 +28,28 @@
 				<li><a href="#">CSS3</a></li>
 				<li><a href="#">Django</a></li>
 				<li id="publicar_nav">
-					<a href="#">Publicar</a></li>
+					<a href="#" class="icon-lapiz" id="mostrar-form">Publicar</a></li>
 			</ul>
 		</nav>
+		<form action="" id="formulario" class="formulario">
+			<input type="text" id="titulo" placeholder="Título" required>
+			<input type="url" id="url" placeholder="Enlace del Articulo" required>
+			<input type="submit" value="Agregar">
+
+		</form>
+		<aside>
+			<video widht="100" height="140" aotoplay controls>
+			<source src="alperezvi.mp4" type="video/mp4">
+			<source src="alperezvi.ogg" type="video/ogg">
+		</video>
+		</aside>
 		<SECTION id="contenido">
 			<article class="item">
 				<figure class="imagen_item">
 					<img src="imagen.jpg"/>
 				</figure >
 				<h2 class="titulo_item"><a href="#">
-					La hegemonía de Python y la caída de Java
+					Cómo crear una cuenta en Google AdWords
 					</a>
 				</h2>
 				<div class="autor_item">
@@ -46,136 +62,11 @@
 					</span>
 				</div>
 				<div class="votacion">
-					<a href="#" class="up">U</a>
+					<a href="#" class="up icon-f-abajo"></a>
 					720
-					<a href="#" class="donw">D</a>
+					<a href="#" class="donw icon-f-arriba"></a>
 					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
-				</div>
-			</article>
-<article class="item">
-				<figure class="imagen_item">
-					<img src="imagen.jpg"/>
-				</figure >
-				<h2 class="titulo_item"><a href="#">
-					POO: Inyección de dependencias en Laravel (III)
-					</a>
-				</h2>
-				<div class="autor_item">
-					por <a href="#">Daniel Perez</a>
-				</div>
-				<div class="datos_item">
-					<a href="#" class="tag_item">Enviar</a>
-					<span class="fecha_item">
-						hace <STRONG>5</STRONG>min
-					</span>
-				</div>
-				<div class="votacion">
-					<a href="#" class="up">U</a>
-					720
-					<a href="#" class="donw">D</a>
-					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
-				</div>
-			</article>
-			<article class="item">
-				<figure class="imagen_item">
-					<img src="imagen.jpg"/>
-				</figure >
-				<h2 class="titulo_item"><a href="#">
-					Las llaves del cuarto de hotel serán una app en tu teléfono
-					</a>
-				</h2>
-				<div class="autor_item">
-					por <a href="#">Daniel Perez</a>
-				</div>
-				<div class="datos_item">
-					<a href="#" class="tag_item">Enviar</a>
-					<span class="fecha_item">
-						hace <STRONG>5</STRONG>min
-					</span>
-				</div>
-				<div class="votacion">
-					<a href="#" class="up">U</a>
-					720
-					<a href="#" class="donw">D</a>
-					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
-				</div>
-			</article>
-			<article class="item">
-				<figure class="imagen_item">
-					<img src="imagen.jpg"/>
-				</figure >
-				<h2 class="titulo_item"><a href="#">
-					Bower, un administrador de paquetes para la web
-					</a>
-				</h2>
-				<div class="autor_item">
-					por <a href="#">Daniel Perez</a>
-				</div>
-				<div class="datos_item">
-					<a href="#" class="tag_item">Enviar</a>
-					<span class="fecha_item">
-						hace <STRONG>5</STRONG>min
-					</span>
-				</div>
-				<div class="votacion">
-					<a href="#" class="up">U</a>
-					720
-					<a href="#" class="donw">D</a>
-					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
-				</div>
-			</article>
-			<article class="item">
-				<figure class="imagen_item">
-					<img src="imagen.jpg"/>
-				</figure >
-				<h2 class="titulo_item"><a href="#">
-					POO: Inyección de dependencias (II)
-					</a>
-				</h2>
-				<div class="autor_item">
-					por <a href="#">Daniel Perez</a>
-				</div>
-				<div class="datos_item">
-					<a href="#" class="tag_item">Enviar</a>
-					<span class="fecha_item">
-						hace <STRONG>5</STRONG>min
-					</span>
-				</div>
-				<div class="votacion">
-					<a href="#" class="up">U</a>
-					720
-					<a href="#" class="donw">D</a>
-					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
-				</div>
-			</article>
-			<article class="item">
-				<figure class="imagen_item">
-					<img src="imagen.jpg"/>
-				</figure >
-				<h2 class="titulo_item"><a href="#">
-					Elementary OS, un estilo OS X para Linux
-					</a>
-				</h2>
-				<div class="autor_item">
-					por <a href="#">Daniel Perez</a>
-				</div>
-				<div class="datos_item">
-					<a href="#" class="tag_item">Enviar</a>
-					<span class="fecha_item">
-						hace <STRONG>5</STRONG>min
-					</span>
-				</div>
-				<div class="votacion">
-					<a href="#" class="up">U</a>
-					720
-					<a href="#" class="donw">D</a>
-					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
 				</div>
 			</article>
 			<article class="item">
@@ -196,11 +87,111 @@
 					</span>
 				</div>
 				<div class="votacion">
-					<a href="#" class="up">U</a>
+					<a href="#" class="up icon-f-abajo"></a>
 					720
-					<a href="#" class="donw">D</a>
+					<a href="#" class="donw icon-f-arriba"></a>
 					<a href="#" class="comentarios_item">69</a>
-					<a href="#" class="guardar_item">X</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Cómo crear una cuenta en Google AdWords
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up icon-f-abajo"></a>
+					720
+					<a href="#" class="donw icon-f-arriba"></a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Cómo crear una cuenta en Google AdWords
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up icon-f-abajo"></a>
+					720
+					<a href="#" class="donw icon-f-arriba"></a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Cómo crear una cuenta en Google AdWords
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up icon-f-abajo"></a>
+					720
+					<a href="#" class="donw icon-f-arriba"></a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="imagen_item">
+					<img src="imagen.jpg"/>
+				</figure >
+				<h2 class="titulo_item"><a href="#">
+					Cómo crear una cuenta en Google AdWords
+					</a>
+				</h2>
+				<div class="autor_item">
+					por <a href="#">Daniel Perez</a>
+				</div>
+				<div class="datos_item">
+					<a href="#" class="tag_item">Enviar</a>
+					<span class="fecha_item">
+						hace <STRONG>5</STRONG>min
+					</span>
+				</div>
+				<div class="votacion">
+					<a href="#" class="up icon-f-abajo"></a>
+					720
+					<a href="#" class="donw icon-f-arriba"></a>
+					<a href="#" class="comentarios_item">69</a>
+					<a href="#" class="guardar_item icon-estrella"></a>
 				</div>
 			</article>
 		</SECTION>
@@ -214,5 +205,7 @@
 				mejorando.la 2014
 			</p>
 		</footer>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="formulario.js"></script>
 </body>
 </html>
